--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /**/values/custom_strings.xml
+  - source: /**/values/rvos_strings.xml
     translation: /%original_path%-%android_code%/%original_file_name%
